_Source/force-app/main/default/objects/BI_Conversation_Topic__c/BI_Conversation_Topic__c.object-meta.xml
<CustomObject>
    <label>Conversation Topic</label>
    <nameField>
        <label>Topic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conversation Topics</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>