_Source/force-app/main/default/objects/BI_Conversation_Topic__c/fields/BI_Category__c.field-meta.xml
<CustomField>
    <fullName>BI_Category__c</fullName>
    <label>Aligned Objective Type Selector</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account management</fullName>
            </value>
            <value>
                <fullName>Business Results</fullName>
            </value>
            <value>
                <fullName>Industry</fullName>
            </value>
            <value>
                <fullName>Airport / Civic / Internal Company</fullName>
            </value>
            <value>
                <fullName>Customer Satisfaction</fullName>
            </value>
            <value>
                <fullName>Sales Planning</fullName>
            </value>
            <value>
                <fullName>Lead Conversion</fullName>
            </value>
            <value>
                <fullName>Jetstream Adoption</fullName>
            </value>
            <value>
                <fullName>BI Adoption</fullName>
            </value>
            <value>
                <fullName>BI Coaching / Ambassador</fullName>
            </value>
            <value>
                <fullName>Work Cross-Functionally</fullName>
            </value>
            <value>
                <fullName>Develop and Share Best Practices</fullName>
            </value>
            <value>
                <fullName>Mentoring and Talent Development</fullName>
            </value>
            <value>
                <fullName>Training / Professional Development</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>