_Source/force-app/main/default/objects/BI_Conversation_Topic__c/fields/BI_Comments__c.field-meta.xml
<CustomField>
    <fullName>BI_Comments__c</fullName>
    <label>Comments</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>