_Source/force-app/main/default/objects/BI_Conversation_Topic__c/fields/BI_Objective_Type__c.field-meta.xml
<CustomField>
    <fullName>BI_Objective_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aligned Objective Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>BI_Objective_Type__c.BI_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>BI_Objective_Type__c.BI_Available_for_Conversation_Topics__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>BI_Objective_Type__c</referenceTo>
    <relationshipLabel>Conversation Topics</relationshipLabel>
    <relationshipName>Conversation_Topics</relationshipName>
    <type>Lookup</type>
</CustomField>