_Source/force-app/main/default/objects/BI_Conversation_Topic__c/fields/BI_One_on_One__c.field-meta.xml
<CustomField>
    <fullName>BI_One_on_One__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>One-on-One</label>
    <referenceTo>BI_One_on_One__c</referenceTo>
    <relationshipLabel>Conversation Topics</relationshipLabel>
    <relationshipName>Topics</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>