_Source/force-app/main/default/objects/BI_Conversation_Topic__c/fields/BI_One_on_One_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>BI_One_on_One_Owner_Id__c</fullName>
    <formula>BI_One_on_One__r.Owner:User.Id</formula>
    <label>One on One Owner Id</label>
    <type>Text</type>
</CustomField>