_Source/force-app/main/default/objects/BI_Conversation_Topic__c/fields/BI_Participant__c.field-meta.xml
<CustomField>
    <fullName>BI_Participant__c</fullName>
    <formula>BI_One_on_One__r.BI_Participant__r.FirstName  &amp;  &quot; &quot; &amp; BI_One_on_One__r.BI_Participant__r.LastName</formula>
    <label>Participant</label>
    <type>Text</type>
</CustomField>