_Source/force-app/main/default/objects/BI_Conversation_Topic__c/fields/BI_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>BI_Sub_Category__c</fullName>
    <label>Sub-Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Events</fullName>
            </value>
            <value>
                <fullName>Traveler Support</fullName>
            </value>
            <value>
                <fullName>Tools and Education</fullName>
            </value>
            <value>
                <fullName>Executive Engagement</fullName>
            </value>
            <value>
                <fullName>Entertainment</fullName>
            </value>
            <value>
                <fullName>Inaugural</fullName>
            </value>
            <value>
                <fullName>Community Events</fullName>
            </value>
            <value>
                <fullName>Unites Sales Events</fullName>
            </value>
            <value>
                <fullName>Company Events</fullName>
            </value>
            <value>
                <fullName>Network/Route Support</fullName>
            </value>
            <value>
                <fullName>TMC Performance</fullName>
            </value>
            <value>
                <fullName>Corporate Performance</fullName>
            </value>
            <value>
                <fullName>New Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>