_Source/force-app/main/default/objects/BI_Conversation_Topic__c/validationRules/BI_Owner_and_Participant_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>BI_Owner_and_Participant_Only</fullName>
    <active>true</active>
    <errorConditionFormula>($User.Id   &lt;&gt;  BI_One_on_One_Owner_Id__c)  &amp;&amp;  ($User.Id  &lt;&gt;  BI_Participant_ID__c)  &amp;&amp; $Profile.Name &lt;&gt; &apos;System Administrator&apos;</errorConditionFormula>
    <errorMessage>Only the One-on-One owner and Participant can create / modify conversation topics for a One-on-One</errorMessage>
</ValidationRule>